# VellumFE

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG_DETAILED.md  CLAUDE.md  COMMAND_INPUT_MIGRATION.md  COMMAND_INPUT_TEST.md  Cargo.toml  GUI_IMPLEMENTATION_PLAN.md  GemStoneIV-XML-Elements.md  KEYBINDINGS.md  LOST_FEATURES.md  PROGRESS.md  RATATUI_AUDIT.md  README.md  RELEASE_NOTES.md  REVERT_INVENTORY.md  TERMINAL_COMPATIBILITY.md  TERMINAL_POSITION_DESIGN.md  TESTING_HIGHLIGHTS.md  TODO.md  UICOLORS_IMPLEMENTATION.md  UTF8_ERROR_FIX.md  WIKI_Spell_Colors.md  WIKI_Targets_Players.md  build_with_strawberry.bat  cargo-test.out  tmp_before.txt  tmp_color_form.txt  tmp_section.txt  tmp_ui_color_editor.rs
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: android-check.yml  beta-release.yml  docs.yml  ios-check.yml  sync-wiki.yml
android/: .gitignore  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/rust/: Cargo.toml
android/rust/src/: lib.rs
book/: book.toml
book/book/: 404.html  index.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-2dbd0703.js  searchindex-2fd63cd2.js  searchindex-6028f454.js  searchindex-67354920.js  searchindex-6e538b1c.js  searchindex-735503f6.js  searchindex-80a196ba.js  searchindex-97ed8572.js  searchindex-aafc8c79.js  searchindex-b2b40ef9.js  searchindex-ca9f5ded.js  searchindex-e3fd3d8e.js  searchindex-eb7e7760.js  searchindex-f407e694.js  toc-03608cc9.js  toc-0d437a7c.js  toc-25e7f624.js  toc-621f15b5.js  toc-9b682bd4.js  toc-a5192a6c.js  toc-c3d5192d.js  toc-c827af74.js  toc-e125f080.js  toc-f5efc91a.js  toc.html
book/src/: SUMMARY.md  introduction.md
defaults/: cmdlist1.xml  colors.toml  config.toml  config_template.toml  highlights.toml  keybinds.toml  layout.toml  layout_template.toml  spell_abbrev.toml
defaults/globals/: colors.toml  config.toml  highlights.toml  hotbars.toml  keybinds.toml  macros.toml  mazes.toml  spell_abbrev.toml  travel_overrides.toml
defaults/layouts/: layout.toml  sidebar.toml  sidebar_80x24.toml
docs/: COMPANION_APP.md  CONVERSATION_HISTORY.md  DRAGDROP_DESIGN.md  DRAGDROP_SUMMARY.md  EVENT_PARSER_DESIGN.md  HIGHLIGHT_UI_DESIGN.md  PERFORMANCE_ELI5.md  PERFORMANCE_MONITORING_TECHNICAL.md  PERFORMANCE_REPORTING_GUIDE.md  SETTINGS_EDITOR_DESIGN.md  SKINS.md  WIKI_AUDIT_FINDINGS.md  layout-engine-spec.md  layout-fixtures.json  lich-remote-connect-plan.md  mobile-web-frontend-plan.md  ui_editor_todo.md
examples/: web_harness.rs
ios/: .gitignore  ExportOptions.plist  README.md  project.yml
ios/app/: BridgingHeader.h  PrivacyInfo.xcprivacy
ios/ci/: VellumFE_AppStore.mobileprovision
ios/rust/: Cargo.toml
ios/rust/include/: vellum_core.h
ios/rust/src/: lib.rs
scripts/: README.md
src/: app.rs  clipboard.rs  cmdlist.rs  config.rs  lib.rs  main.rs  migrate.rs  migration.rs  network.rs  parser.rs  performance.rs  platform.rs  selection.rs  session_cache.rs  sound.rs  spell_abbrevs.rs  terminal_position.rs  theme.rs  validator.rs  webui.rs
src/config/: AGENTS.md  colors.rs  highlights.rs  hotbars.rs  io.rs  keybinds.rs  layout.rs  macros.rs  menu_keybind_validator.rs  paths.rs  profiles.rs  settings.rs  skins.rs  spacer_tests.rs  templates.rs  widgets.rs  window_def.rs  wrayth_import.rs
src/core/: AGENTS.md  bounty_parser.rs  evidence.rs  ghost_rooms.rs  highlight_engine.rs  hotbar.rs  input_router.rs  map_service.rs  mapdb_update.rs  menu_actions.rs  messages.rs  mod.rs  remote.rs  state.rs
src/data/: input.rs  mod.rs  remote_buffer.rs  ui_state.rs  webui.rs  widget.rs  window.rs
src/frontend/: events.rs  mod.rs
src/theme/: loader.rs
src/tts/: mod.rs
src/ui/: active_effects.rs  color_form.rs  color_palette_browser.rs  color_picker.rs  command_input.rs  compass.rs  countdown.rs  dashboard.rs  hand.rs  hands.rs  highlight_browser.rs  highlight_form.rs  indicator.rs  injury_doll.rs  inventory_window.rs  keybind_browser.rs  keybind_form.rs  mod.rs  performance_stats.rs  popup.rs  popup_menu.rs  progress_bar.rs  room_window.rs  scrollable_container.rs  settings_editor.rs  spacer.rs  spell_color_browser.rs  spell_color_form.rs  spells_window.rs  tabbed_text_window.rs  text_window.rs  theme.rs  uicolors_browser.rs  window_editor.rs  window_editor_v2.rs  window_editor_v3.rs  window_manager.rs
src/window_position/: AGENTS.md  linux.rs  macos.rs  mod.rs  storage.rs  windows.rs
tests/: architecture.rs  bench_parse.rs  layout_cache.rs  layout_engine.rs  layout_validation.rs  lich_attach.rs  parser_integration.rs  pathing.rs  ui_integration.rs  web_server.rs  webui_bridge.rs
tests/data/: vellum-crash-payload-bigshot.json  vellum-crash-payload-ecleanse.json  webui-grid-node-sample.json
tests/fixtures/: active_cooldowns.xml  active_cooldowns_clear.xml  active_debuffs.xml  active_debuffs_clear.xml  active_effects.xml  active_effects_clear.xml  active_spells.xml  active_spells_clear.xml  bench_highlights.toml  buffs_progress.xml  combat_roundtime.xml  combat_targets.xml  combined_counts.xml  countdown_casttime.xml  gen_bench_highlights.py  icon_dialogdata.xml  icon_dialogdata_clear.xml  indicator_dashboard_add.xml  injuries.xml  (+28 more)
vellum_fe_beta_1/: .gitignore  CLAUDE.md  KEYBINDINGS.md  POPUP_STYLE_GUIDE.md  TERMINAL_COMPATIBILITY.md  game_startup_feed.xml
wiki/: Advanced-Characters.md  Advanced-Streams.md  Advanced-XML.md  Commands-Reference.md  Commands.md  Config-Cheatsheet.md  Configuration-Guide.md  Configuration.md  Development-Guide.md  FAQ.md  Feature-Roadmap.md  Getting-Started.md  Highlight-Management.md  Highlights.md  Home.md  Installation.md  Keybind-Cheatsheet.md  Keybind-Management.md  Keybinds.md  Layout-Management.md  Layouts-and-Windows.md  Mouse-Controls.md  Mouse-and-Keyboard.md  Quick-Start.md  README.md  Spell-Colors.md  Stream-Routing.md  Targets-and-Players.md  Text-Selection.md  Themes-and-Colors.md  Troubleshooting-Quick-Fixes.md  Troubleshooting.md  Widget-Quick-Reference.md  Widget-Reference.md  Window-Editor.md  Window-Management.md  Window-Reference.md  Window-Types.md  Windows-and-Layouts.md
(+485 files in other folders)
