[workspace]
members = ["android/rust", "ios/rust"]

[package]
name = "vellum-fe"
version = "0.3.0-beta.4"
edition = "2021"
authors = ["Nisugi"]
description = "Modern, high-performance multi-frontend (TUI/GUI) client for GemStone IV"

[[bin]]
name = "vellum-fe"
path = "src/main.rs"
# The desktop binary always ships both frontends; the feature split exists so
# the library builds with --no-default-features for Android (headless + web).
required-features = ["tui", "gui", "desktop"]

[dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }
anyhow = "1"

# Terminal UI
ratatui = { version = "0.29", optional = true }
crossterm = { git = "https://github.com/justinpopa/crossterm.git", branch = "dev", features = ["event-stream"], optional = true }
tui-textarea = { version = "0.7", optional = true }

# GUI (numpad-aware fork)
egui = { git = "https://github.com/Nisugi/egui.git", branch = "numpad-support", package = "egui", optional = true }
eframe = { git = "https://github.com/Nisugi/egui.git", branch = "numpad-support", package = "eframe", default-features = false, features = ["default_fonts", "wgpu", "x11", "wayland"], optional = true }
fontdb = { version = "0.23", optional = true }  # System font discovery for per-window font selection
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp"], optional = true }  # Skin image decoding (backgrounds, icons)

# Serialization
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
toml = "0.8"
dirs = "5"

# Text processing
regex = "1"
aho-corasick = "1"  # Fast literal string matching for highlights
quick-xml = "0.36"  # XML parsing
include_dir = "0.7"  # Embed default config files
rpassword = { version = "7", optional = true }
# eAccess login TLS via the OS stack: SChannel (Windows), Security.framework
# (macOS), system OpenSSL (Linux). No vendored OpenSSL build, no Perl, no vcpkg.
# NOTE: rustls cannot replace this — eaccess.play.net only speaks TLS 1.2 with
# static-RSA key exchange (AES128-GCM-SHA256), which rustls refuses to implement.
native-tls = "0.2"
getrandom = "0.3"  # Web pairing token generation
# Seals stored passwords on non-desktop builds (Android): the key comes
# from the Kotlin shell via VELLUM_PASSWORD_KEY (Android Keystore wraps
# it at rest). Pure Rust, compiled everywhere, used only without the
# `desktop` feature (desktop uses the OS keyring instead).
chacha20poly1305 = "0.10"

# Web server (mobile web frontend) - HTTP + WebSocket sidecar
axum = { version = "0.8", features = ["ws"] }
# WebSocket client for the Lich WebUI bridge (loopback only, no TLS)
tokio-tungstenite = "0.26"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
qrcode = { version = "0.14", default-features = false, features = ["svg"] }  # .webinfo pairing QR

# Sound (optional)
rodio = { version = "0.19", optional = true }

# TTS - Text-to-speech (feature-gated; stub on non-desktop builds)
tts = { version = "0.26", optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }

# Time handling
chrono = "0.4"

# Clipboard
arboard = { version = "3", optional = true }
base64 = "0.22.1"
sysinfo = { version = "0.30", optional = true }

# URL opening (for LaunchURL)
open = { version = "5", optional = true }

# OS credential store for launcher profiles (Windows Credential Manager /
# macOS Keychain / Linux Secret Service). Best-effort: launcher falls back
# to prompting when no secure store is available (headless, WSL, bare WMs).
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service", "vendored"], optional = true }

[features]
# The Android build is `--no-default-features`: core + parser + network +
# web frontend + (Phase A2) headless runtime only.
default = ["tui", "gui", "sound", "tts", "desktop"]
tui = ["dep:ratatui", "dep:crossterm", "dep:tui-textarea"]
gui = ["dep:egui", "dep:eframe", "dep:fontdb", "dep:image"]
sound = ["dep:rodio"]
tts = ["dep:tts"]
# Desktop OS integrations: clipboard, browser-open, process inspection,
# credential store, terminal password prompt.
desktop = ["dep:arboard", "dep:open", "dep:sysinfo", "dep:keyring", "dep:rpassword"]

# Linux/Android: statically link a vendored OpenSSL so binaries don't depend
# on the system libssl (Android has none). Perl is needed to build it, but
# it's universal on Linux and present on CI runners; the vendored-build pain
# the native-tls swap removed was Windows-only.
[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
native-tls = { version = "0.2", features = ["vendored"] }

# Platform-specific dependencies for window position persistence
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
]}

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dev-dependencies]
tempfile = "3.24.0"

[patch.crates-io]
egui = { git = "https://github.com/Nisugi/egui.git", branch = "numpad-support", package = "egui" }
gpu-allocator = { path = "vendor/gpu-allocator-0.28.0" }
