[package]
name = "vellum-android"
version = "0.3.0-beta.8"
edition = "2021"
publish = false
description = "JNI embedding of the VellumFE headless runtime for the Android shell"

[lib]
crate-type = ["cdylib"]

[dependencies]
# The core: parser, network, AppCore, web frontend, headless runtime.
# No TUI/GUI/desktop integrations — see the feature table in the root manifest.
vellum-fe = { path = "../..", default-features = false }
# The "log" feature forwards tracing events from the whole graph to the
# `log` crate when no tracing subscriber is installed — which is how core
# logs reach logcat via android_logger without a bridge layer. Declared
# here (not just transitively) because the forwarding is this crate's
# load-bearing behavior, not an accident of feature unification.
tracing = { version = "0.1", features = ["log"] }
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
android_logger = "0.14"
